--- a/modelling_ipynb/modelling.ipynb
+++ b/modelling_ipynb/modelling.ipynb
@@ -8,6 +8,8 @@
       },
       "outputs": [],
       "source": [
+        "#import library\n",
+        "\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import xgboost as xgb\n",
